--- a/.github/workflows/trading_bot.yml
+++ b/.github/workflows/trading_bot.yml
@@ -21,7 +21,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          # CRITICAL FIX: Use --no-cache-dir to prevent re-using old, broken yfinance versions
+          pip install -r requirements.txt --no-cache-dir  <-- THIS LINE IS KEY
 
       - name: Run Trading Bot and Send Alerts
         id: scanner
