--- a/.github/workflows/trading_bot.yml
+++ b/.github/workflows/trading_bot.yml
@@ -1,10 +1,11 @@
 name: Daily Bollinger Signal Bot
 
-on:
-  workflow_dispatch:
-  schedule:
-    # Runs at 12:00 UTC (4:00 PM IST) daily
-    - cron: '0 12 * * *'
+# Triggers the workflow at 9:15 AM EST (which is approximately 3:45 AM UTC) every weekday (Monday-Friday)
+schedule:
+  - cron: '15 3 * * 1-5'
+
+# Allows manual running from the Actions tab
+workflow_dispatch:
 
 jobs:
   run-scanner:
@@ -14,7 +15,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Python 3.10
-        uses: actions/setup-python@v5 # Changed back to v5 for stability
+        uses: actions/setup-python@v5
         with:
           python-version: '3.10'
 
@@ -22,28 +23,27 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           # CRITICAL FIX: Use --no-cache-dir to prevent re-using old, broken yfinance versions
-          pip install -r requirements.txt --no-cache-dir  <-- THIS LINE IS KEY
+          pip install -r requirements.txt --no-cache-dir
 
       - name: Run Trading Bot and Send Alerts
         id: scanner
         run: |
-          # CRITICAL FIX: Execute the correct script (app.py)
-          SIGNAL_OUTPUT=$(python app.py)
-
-          # Pass the output to the next steps
-          echo "signal=$SIGNAL_OUTPUT" >> $GITHUB_OUTPUT
+          # 1. Execute the correct script (app.py) and capture its output into a variable.
+          SIGNAL=$(python app.py)
+          
+          # 2. This critical line saves the variable value to be accessible in the next step.
+          echo "SIGNAL_OUTPUT=$SIGNAL" >> $GITHUB_OUTPUT
 
       - name: Send Telegram Notification (ONLY if trade signal is not empty)
+        if: ${{ steps.scanner.outputs.SIGNAL_OUTPUT != '' }}
         uses: appleboy/telegram-action@master
         with:
           to: ${{ secrets.TELEGRAM_CHAT_ID }}
           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           message: |
-            *NEW BOT ALERT: Signal Found*
-
-            Signal Details: ${{ steps.scanner.outputs.signal }}
+            *TRADING BOT ALERT Signal Found*
+            Signal Details: ${{ steps.scanner.outputs.SIGNAL_OUTPUT }}
           disable_web_page_preview: true
-        if: ${{ steps.scanner.outputs.signal != '' }}
 
-      - name: Complete job
+      - name: Complete Job
         run: echo "Bot run complete."
